Light Toolbar styling. New scrollbars for editor. Added html element padding to editor. Fixed scrolling behavior for editor

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,12 +71,41 @@ body::-webkit-scrollbar-thumb {
   outline: 1px solid slategrey;
 } */
 
-.editor-container::-webkit-scrollbar {
+/* .editor-container::-webkit-scrollbar {
   display: none;
   overflow: auto;
-}
+} */
 
 .editor-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+div[aria-expanded] {
+  height: 100%;
+}
+
+/*
+ *  STYLE 1
+ */
+
+/* .editor-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #FFFFFF00;
+}
+
+.editor-container::-webkit-scrollbar
+{
+	width: 12px;
+		background-color: #FFFFFF00;
+
+}
+
+.editor-container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #2D3748;
+} */
